[package]
name = "eauth_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2", "pem"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
once_cell = "1"
base64ct = "=1.6.0"
zeroize = "=1.7.0"
url = "=2.4.1"
idna = "=0.4.0"
hashbrown = "=0.14.5"
indexmap = "=2.2.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
] }
